# pyhigrid

./: .gitignore  README.md  pyproject.toml
archive/: album_scroll_widget.py.disable
src/pyhigrid/: __about__.py  __init__.py  __main__.py
src/pyhigrid/configue/: __init__.py  configue.py  observable_value.py  required_conf_table.py  ui_enum.py
src/pyhigrid/configue/utils/: __init__.py  namespace.py  simple_env_args_parser.py  simple_sys_args_parse.py
src/pyhigrid/core/: __init__.py  application.py
src/pyhigrid/db/: __init__.py  database.py
src/pyhigrid/repositories/: album.py  importer.py
src/pyhigrid/resources/default_theme_qss/: main_window.qss
src/pyhigrid/resources/icon/engineering/: image_icon.paint  more_icon.paint  search_icon.paint
src/pyhigrid/resources/sql/: media_library_schema.sql
src/pyhigrid/schemas/: constants.py  entities.py  enums.py
src/pyhigrid/ui/: __init__.py
src/pyhigrid/ui/gui/: __init__.py
src/pyhigrid/ui/gui/_logging/: decorator.py
src/pyhigrid/ui/gui/anim/: search_bar_anim.py
src/pyhigrid/ui/gui/core/: __init__.py  application.py  content.py  frame.py  titlebar.py  window.py
src/pyhigrid/ui/gui/server/: datatypes.py
src/pyhigrid/ui/gui/server/thumbnail/: imageloader.py  provider.py
src/pyhigrid/ui/gui/utils/: disable_win11_round_corners.py  qss_border_radius_getter.py  qss_selector.py  window_corner_radius.py  window_resizer.py
src/pyhigrid/ui/gui/widget/: action_buttons.py  album_scroll_widget.py  marquee_label.py  title_and_icon.py  tool_bar_widget.py  top_window_action_buttons_widget.py  unified_preview.py
(+6 files in other folders)
