[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhigrid"
version = "0.1.0"
description = "A HIG-like image grid tool to showcase your Hyprland ricing setups."
readme = "README.md"
authors = [
    {name = "Zer0x70e8", email = "  @qq.com"}
]

license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
]

maintainers = [
    {name = "Zer0x70e8", email = ""},
]
keywords = [
    "hyprland", "ricing",
    "image-grid", "gallery",
    "screenshot", "unixporn", "hig-like",
    "photo", "album", "image"
]

[project.scripts]
#pyhigrid = "photoapp.launch:main"
#pyhigrid-cli = "photoapp.cli.main:cli"   # 可选组

[tool.setuptools.packages.find]
where = ["src"]


[project.optional-dependencies]
cli = ["click", "rich"]   # CLI 相关依赖
